# factreview

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  env_example.txt  pyproject.toml  requirements.txt  run_deepreview.py
.github/workflows/: ci.yml
assets/teaser_template/: teaser_figure.pptx
baseline/compgcn/paper_extracted/: mineru_hint.txt  paper.mineru.content_list.json  paper.mineru.middle.json  paper.mineru.model.json
baseline/repomaster/: tasks.yaml
code_evaluation/: .gitignore  README.md  env_example.txt  environment.yml  main.py  requirements.txt  requirements_pdf.txt
code_evaluation/baseline/: paper_baseline.example.json
code_evaluation/baseline/compgcn/: baseline.json  tasks.yaml
code_evaluation/baseline/compgcn_taskgen_check/: tasks.yaml
code_evaluation/docs/claude/: commit.md  debug.md  repro.md  review.md
code_evaluation/fact_extraction/: README.md
code_evaluation/fact_extraction/converters/: __init__.py
code_evaluation/refchecker/: __init__.py  env.example
code_evaluation/refchecker/core/: __init__.py
code_evaluation/s2-title-to-bibtex/: LICENSE  README.md  pyproject.toml
code_evaluation/s2-title-to-bibtex/tests/: test_integration_semantic_scholar.py  test_matching_logic.py
code_evaluation/scripts/: debug_nodes.py  node_stepper.py  verify_paper_image.py
code_evaluation/src/: __init__.py  workflow.py
code_evaluation/src/nodes/: __init__.py  finalize.py  fix.py  judge.py  prepare.py  run.py
code_evaluation/src/prompts/: codex_instructions.txt
code_evaluation/src/refchecker/: __init__.py  checker.py  config.py  db.py  errors.py  parallel.py  pdf_service.py
code_evaluation/src/tools/: __init__.py  alignment.py  baseline.py  bibtex.py  codex_client.py  docker.py  fs.py  llm.py  meta.py  metrics.py  paper_tables.py  pdf_mineru.py  recorder.py  refcheck.py  task_infer.py
code_evaluation/tests/: test_refcheck.py  test_workflow_integration.py
compare/compgcn/reports/: 2026-01-20_183552.md  2026-01-20_195551.md
compare/compgcn_taskgen_check/reports/: 2026-03-09_201952.md  2026-03-09_202622.md  2026-03-09_203735.md
compare/paper/reports/: 2026-01-20_181555.md
configs/: default.yaml
configs/baselines/repomaster/: baseline.json  tasks.yaml
deepreview/module/: __init__.py
deepreview/module/tools/: external_queries.py
demos/compgcn/: run.py
docs/: architecture.md
docs/adr/: 0001-src-layout.md  0002-langgraph-orchestration.md  0003-pydantic-contracts.md  0004-uv-dependency-mgmt.md  0005-no-paper-specific-code.md
fact_extraction/: .gitignore  __init__.py  config.py  convert.py  convert1.py  requirements.txt  runner.py  test_nougat_fix.py
fact_extraction/adapters/: mineru.py
fact_extraction/converters/: base.py  grobid.py  nougat_ocr.py  science_parse.py
fact_extraction/integration/: code_eval_compare.py
fact_extraction/report/: review_report_pdf.py  source_annotations.py
fact_extraction/tools/: review_tools.py
module/: deepreview.py
module/tools/: __init__.py
review/compgcn/2026-01-05_215703/: README.md
review/compgcn/2026-01-05_223305/: README.md  facts.json
review/compgcn/2026-01-06_201549/: README.md  facts.json
review/compgcn/2026-01-07_gpu/: facts.json
review/compgcn_taskgen_check/2026-03-09_201952/: README.md  facts.json
review/compgcn_taskgen_check/2026-03-09_202416/: facts.json
s2-title-to-bibtex/s2_title_to_bibtex/: cli.py
scripts/: debug_nodes.py  execute_review_pipeline.py  execute_review_runtime_job.py  execute_stage_claim_extract.py  execute_stage_execution.py  execute_stage_fact_extraction.py  execute_stage_ingestion.py  execute_stage_parse.py  execute_stage_positioning.py  execute_stage_refcheck.py  execute_stage_reference_check.py  execute_stage_report.py  execute_stage_synthesis.py  execute_stage_teaser.py  generate_teaser_figure.py  node_stepper.py  run_demo_compgcn.py  run_full_pipeline.py  run_fx_runtime_job.py  setup_docker_mirror.sh  verify_paper_image.py
src/: cli.py  cli_legacy.py  pipeline_full.py  workflow.py
src/agent_runtime/: agent_prompt.py  agent_tools.py  requirements.txt  runner.py
src/common/: config.py  env.py  pipeline_context.py  state.py  storage.py  types.py
src/execution/: fx_stage_runner.py  graph.py  stage_runner.py
src/fact_extraction/: __init__.py  decomposer.py  extractor.py  fx_stage_runner.py  results_parser.py  stage_runner.py
src/factreview/: __init__.py  __main__.py  cli.py  cli_legacy.py
src/fx_runtime/: config.py  requirements.txt  runner.py
src/ingestion/: __init__.py  fx_stage_runner.py  llama_index.py  mineru.py  nougat.py  runtime_bridge.py  science_parse.py
src/llm/: client.py  codex_client.py  provider_capabilities.py
src/nodes/: plan.py  prepare.py  run.py
src/positioning/: __init__.py  bibtex.py  fx_stage_runner.py  pipeline.py  refcheck.py  stage_runner.py
src/reference_check/: refcheck.py  stage_runner.py
src/schemas/: __init__.py  claim.py  config.py  execution.py  positioning.py  review.py  stage.py
src/synthesis/: __init__.py  fx_stage_runner.py  stage_runner.py
src/tools/: codex_auth.py  llm.py  meta.py  results_tables.py  runner.py
src/util/: fs.py  paper_input.py  recorder.py  run_layout.py  runner.py  verbose.py
tests/unit/: test_pipeline_context.py  test_runtime_bridge.py
tools/refchecker/: .gitignore  LICENSE  MANIFEST.in  Makefile  PLANNING.md  QUICKSTART.md  README.md  TEST_STATUS.md  WEBUI_COMPLETE.md  WEBUI_IMPLEMENTATION.md  build.sh  build_package.py  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_refchecker.py  run_webui.py  start_webui.bat  test_all.bat  test_package_install.py  test_venue.py
tools/s2_title_to_bibtex/: .gitignore  LICENSE  README.md  pyproject.toml
tools/s2_title_to_bibtex/s2_title_to_bibtex/: cli.py
tools/s2_title_to_bibtex/skills/s2-title-to-bibtex/: SKILL.md
tools/s2_title_to_bibtex/skills/s2-title-to-bibtex/scripts/: s2_title_to_bibtex.py
tools/s2_title_to_bibtex/tests/: test_cli_behavior.py  test_integration_semantic_scholar.py  test_matching_logic.py
(+798 files in other folders)
