[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "s2-title-to-bibtex"
version = "0.1.0"
description = "Convert paper titles into BibTeX by querying Semantic Scholar Graph API (no LLM-generated citations)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Ling (LeoYML)" }
]
keywords = ["bibtex", "semantic-scholar", "citation", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
s2-title-to-bibtex = "s2_title_to_bibtex.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["s2_title_to_bibtex"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that hit the real Semantic Scholar API (requires SEMANTIC_SCHOLAR_API_KEY)",
]
